--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
         "php": "^8.0.2",
         "cviebrock/eloquent-sluggable": "^9.0",
         "deployer/deployer": "*",
+        "doctrine/dbal": "^3.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "munafio/chatify": "^1.3",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
