--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "lee-to/moonshine": "^1.4",
         "livewire/livewire": "^2.10",
         "munafio/chatify": "^1.3",
         "pusher/pusher-php-server": "^7.0"
